// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BackgroundImage 1`] = `
<div
  className="pf-c-background-image"
  style={
    Object {
      "--pf-c-background-image--BackgroundImage": "url(/assets/images/pfbg_576.jpg)",
      "--pf-c-background-image--BackgroundImage--lg": "url(/assets/images/pfbg_1200.jpg)",
      "--pf-c-background-image--BackgroundImage--sm": "url(/assets/images/pfbg_768.jpg)",
      "--pf-c-background-image--BackgroundImage--sm-2x": "url(/assets/images/pfbg_768@2x.jpg)",
      "--pf-c-background-image--BackgroundImage-2x": "url(/assets/images/pfbg_576@2x.jpg)",
      "--pf-c-background-image--Filter": "url(#patternfly-background-image-filter-overlay0)",
    }
  }
>
  <svg
    className="pf-c-background-image__filter"
    height="0"
    width="0"
    xmlns="http://www.w3.org/2000/svg"
  >
    <filter
      id="patternfly-background-image-filter-overlay0"
    >
      <feColorMatrix
        type="matrix"
        values="1 0 0 0 0 1 0 0 0 0 1 0 0 0 0 0 0 0 1 0"
      />
      <feComponentTransfer
        colorInterpolationFilters="sRGB"
        result="duotone"
      >
        <feFuncR
          tableValues="0.086274509803922 0.43921568627451"
          type="table"
        />
        <feFuncG
          tableValues="0.086274509803922 0.43921568627451"
          type="table"
        />
        <feFuncB
          tableValues="0.086274509803922 0.43921568627451"
          type="table"
        />
        <feFuncA
          tableValues="0 1"
          type="table"
        />
      </feComponentTransfer>
    </filter>
  </svg>
</div>
`;

exports[`allows passing in a single string as the image src 1`] = `
<div
  className="pf-c-background-image"
  style={
    Object {
      "--pf-c-background-image--BackgroundImage": "url(/assets/images/pfbg_1200.jpg)",
      "--pf-c-background-image--BackgroundImage--lg": "url(/assets/images/pfbg_1200.jpg)",
      "--pf-c-background-image--BackgroundImage--sm": "url(/assets/images/pfbg_1200.jpg)",
      "--pf-c-background-image--BackgroundImage--sm-2x": "url(/assets/images/pfbg_1200.jpg)",
      "--pf-c-background-image--BackgroundImage-2x": "url(/assets/images/pfbg_1200.jpg)",
      "--pf-c-background-image--Filter": "url(#patternfly-background-image-filter-overlay1)",
    }
  }
>
  <svg
    className="pf-c-background-image__filter"
    height="0"
    width="0"
    xmlns="http://www.w3.org/2000/svg"
  >
    <filter
      id="patternfly-background-image-filter-overlay1"
    >
      <feColorMatrix
        type="matrix"
        values="1 0 0 0 0 1 0 0 0 0 1 0 0 0 0 0 0 0 1 0"
      />
      <feComponentTransfer
        colorInterpolationFilters="sRGB"
        result="duotone"
      >
        <feFuncR
          tableValues="0.086274509803922 0.43921568627451"
          type="table"
        />
        <feFuncG
          tableValues="0.086274509803922 0.43921568627451"
          type="table"
        />
        <feFuncB
          tableValues="0.086274509803922 0.43921568627451"
          type="table"
        />
        <feFuncA
          tableValues="0 1"
          type="table"
        />
      </feComponentTransfer>
    </filter>
  </svg>
</div>
`;
